--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
 
 		<slf4j.logging.version>1.7.21</slf4j.logging.version>
 	</properties>
